client/components/EventFeed/card_styles.css
.event-feed {
  height:100%;
  background-color:white;
}
.card {
  width:70%;
  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
  margin-left: 15%;
  margin-right: 15%;
  background-color: lightgray;
  color:black;
  font-weight: bold;
  text-align: center;
  min-height: 25px;
  margin-bottom: 1%;
  padding:10px;
  border-color: black;
  border-style: solid;
  border-width: 3px;
  border-radius: 8px;
}
.refreshArea {
  display:flex;
  justify-content: center;
}
.commentText {
  font-style: italic;
}
.headerText {
  width:70%;
  margin-left: 15%;
  margin-right: 15%;
  color: White;
  margin-bottom: 10px;
  text-align: center;
}
/* .eventBuffer {
  margin-bottom: 10%;
} */
.displayMore {
  border: black solid 2px;
  background:lightgray;
  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
  border-radius: 5%;
  margin-bottom: 100px;
  cursor: pointer;
  width:15%;
}
.loaderContainer {
  min-height:800px;
  background-color: black;
  height:100vh;
  width:100vw;
}
.buttonContainer {
  display:flex;
  justify-content: center;
}
.loaderImage {

  position: absolute;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}
.loaderText {
  position: absolute;
    top:40%;
    bottom: 0;
    left: 47%;
    right: 0%;
    margin: auto;
}
.refreshButt {
  display:flex;
  background:lightgray;
  justify-content: center;
  border: black solid 2px  ;
  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.5);
  border-radius: 5%;
  margin-top: 2%;
  cursor: pointer;
}

